--- a/blog.html
+++ b/blog.html
@@ -18,14 +18,12 @@
 			<li style="font-size:12px;"><a href="remix.html"><font color="#FFD700">remix</font></a></li>
 			<li style="font-size:12px;"><a href="course.html"><font color="#FFD700">course <br />retrospective</font></a></li>
 			<li style="font-size:12px;"><a href="blog.html"><font color="#FFD700">blog</font></a></li>
-		</ul>
-		</header>
-<mean>		
-<body>
+		</ul></header>
+	
 
-<p>9-7-13</P>
+
 <h3>#1.First Day</h3>
-First day of the writing class. I want to tell everyone that I am not a good writer. I am kind of nervous about this class. I don't think it will be easy for me to get a good grade. This class is super long too. It will take more than an hour. After the first lesson, I start to realize besides writing, we need to create a website too. That sounds fun to me because I am very "good" at editing html!
+<p>First day of the writing class. I want to tell everyone that I am not a good writer. I am kind of nervous about this class. I don't think it will be easy for me to get a good grade. This class is super long too. It will take more than an hour. After the first lesson, I start to realize besides writing, we need to create a website too. That sounds fun to me because I am very "good" at editing html!</P>
 <p>9-12-13</p>
 <h3 style="color:yellow">#2. It Gets Better</h3><div align="middle"><iframe width="480" height="360" src="//www.youtube.com/embed/KYa0wi4XzeI" frameborder="0" allowfullscreen></iframe></div>
 <p> The purpose of the is to express his love and miss on his uncle. He also wants to encourage gay people no matter now or later having difficulty should keep believing in life. And he wants to tell them everything will get better!
