--- a/research5.html
+++ b/research5.html
@@ -7,10 +7,8 @@
 
 <link type="text/css" rel="stylesheet" href="style.css">
 
-<body style="font-family:cursive;font-size:22px;background-image:url(http://www.wallpaperfull.com/stockimage/abstract-surprising-black-paper-texture-background-hd-widescreen-background.jpg)">
-	<marquee behavior="scroll" direction="left" scrollamount="30"><img src="http://www.quackit.com/pix/web_graphics/free_website_graphics/clip_arts/bats_013.gif" width="125" height="82" alt="Flying Bat" /></marquee><content>
-		<header>
-		
+<body style="font-family:cursive;font-size:22px;background-image:url(http://www.wallng.com/images/2013/10/myspace-html-background-codes-background-zimbio.jpg)">
+	
 <h1>my portfolio</h1>
 		<ul id="nav">
 			
